--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "prepare": "panda codegen",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -16,11 +17,13 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@pandacss/dev": "^0.31.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "typescript": "^5"
   }
 }
