--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.20.5",
     "eslint-config-prettier": "^9.1.0",
     "next": "14.1.0",
     "prettier": "^3.2.5",
