--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.20.5",
+    "@vinejs/vine": "^1.7.1",
     "eslint-config-prettier": "^9.1.0",
     "next": "14.1.0",
     "prettier": "^3.2.5",
