--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.9.1",
     "@tanstack/react-query": "^5.20.5",
     "@vinejs/vine": "^1.7.1",
     "eslint-config-prettier": "^9.1.0",
@@ -26,6 +27,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "prisma": "^5.9.1",
     "typescript": "^5"
   }
 }
