--- a/.prettierrc
+++ b/.prettierrc
@@ -8,6 +8,5 @@
   "bracketSpacing": false,
   "bracketSameLine": false,
   "arrowParens": "always",
-  "endOfLine": "lf",
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "endOfLine": "lf"
 }
