--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "@prisma/client": "^5.9.1",
     "@tanstack/react-query": "^5.20.5",
     "@vinejs/vine": "^1.7.1",
-    "eslint-config-prettier": "^9.1.0",
     "next": "14.1.0",
-    "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -25,8 +23,10 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "^14.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.5",
+    "eslint-config-prettier": "^9.1.0",
     "prisma": "^5.9.1",
     "typescript": "^5"
   }
