:wrench: add alias for constants

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
       "@utils/*": ["./app/utils/*"],
       "@functions/*": ["./app/utils/functions/*"],
       "@appTypes/*": ["./app/utils/types/*"],
+      "@constants/*": ["./app/utils/constants/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
