--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.9.1",
     "@tanstack/react-query": "^5.20.5",
     "@vinejs/vine": "^1.7.1",
+    "bcrypt": "^5.1.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
