--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.20.5",
     "@vinejs/vine": "^1.7.1",
     "bcrypt": "^5.1.1",
+    "jose": "^5.2.2",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
