Api/rest admin (#3)
* :wrench: add aliases for utils, functions and app types

* :label: create api error type

* :wrench: add alias for constants

* :sparkles: add http response codes constants

* :sparkles: add error message for server error

* :sparkles: create error response send function

* :sparkles: create json response send function

* :bug: use http server error code as an import instead of http ok code

* :sparkles: create prisma client singleton

* :bug: export function to use

* :memo: create bruno collection

* :safety_vest: add admin from database schema

* :label: add type for api collection

* :sparkles: create method to return an object collection from api

* :recycle: remove code parameter and use HTTP_OK as status for return

* :sparkles: create admins get all route

* :memo: create bruno get all admin route

* :memo: update send functions comments

* :bulb: add comment for server error message

* :bulb: add comment for admin get all route

* :sparkles: add duplicate error message

* :sparkles: handle duplicates error

* :sparkles: handle schema validation error

* :sparkles: create admin creation route (WIP, missing password encryption)

* :sparkles: create admin formatting for api function

* :recycle: use admin formatting function

* :memo: create bruno create admin route

* :wrench: add bcrypt for password encryption

* :recycle: register prisma client singleton into globalThis object for better performance

* :wrench: add bcrypt types

* :sparkles: add bcrypt salt rounds constant

* :sparkles: add message for env variable not defined

* :sparkles: create password encryption function

* :sparkles: create password verification function

* :sparkles: hash password in admin creation

* :bulb: remove redondant comments

* :wrench: add jose lib for jwt

* :sparkles: add messages and http code for admin authentication errors

* :sparkles: create jwt creation function for adm

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,11 @@
       "@/*": ["./*"],
       "@app/*": ["./app/*"],
       "@assets/*": ["./app/assets/*"],
-      "@schemas/*": ["./app/vine/*"]
+      "@schemas/*": ["./app/vine/*"],
+      "@utils/*": ["./app/utils/*"],
+      "@functions/*": ["./app/utils/functions/*"],
+      "@appTypes/*": ["./app/utils/types/*"],
+      "@constants/*": ["./app/utils/constants/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
