--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@prisma/client": "^5.9.1",
     "@tanstack/react-query": "^5.20.5",
     "@vinejs/vine": "^1.7.1",
+    "bcrypt": "^5.1.1",
+    "jose": "^5.2.2",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@pandacss/dev": "^0.31.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
