:wrench: install eslint for panda css plugin

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@pandacss/dev": "^0.31.0",
+    "@pandacss/eslint-plugin": "^0.1.0",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
