--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
-  "extends": "next/core-web-vitals",
-  "plugins": ["prettier", "@pandacss"],
+  "extends": ["next/core-web-vitals", "plugin:@pandacss/recommended"],
+  "plugins": ["prettier"],
   "rules": {
     "prettier/prettier": "error",
     "linebreak-style": ["error", "unix"],
@@ -57,15 +57,6 @@
     "brace-style": "error",
     "no-whitespace-before-property": "error",
     "switch-colon-spacing": "error",
-    "no-case-declarations": "off",
-    "@pandacss/file-not-included": "error",
-    "@pandacss/no-config-function-in-source": "error",
-    "@pandacss/no-debug": "error",
-    "@pandacss/no-dynamic-styling": "error",
-    "@pandacss/no-hardcoded-color": "error",
-    "@pandacss/no-invalid-token-paths": "error",
-    "@pandacss/no-invalid-nesting": "error",
-    "@pandacss/no-property-renaming": "error",
-    "@pandacss/no-unsafe-token-fn-usage": "error"
+    "no-case-declarations": "off"
   }
 }
