--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["next/core-web-vitals", "plugin:@pandacss/recommended"],
+  "extends": "next/core-web-vitals",
   "plugins": ["prettier"],
   "rules": {
     "prettier/prettier": "error",
