--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
       "@components/*": ["./app/components/*"],
       "@providers/*": ["./app/providers/*"],
       "@hooks/*": ["./app/hooks/*"],
+      "@views/*": ["./app/views/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
