:wrench: add @styles path alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
       "@providers/*": ["./app/providers/*"],
       "@hooks/*": ["./app/hooks/*"],
       "@views/*": ["./app/views/*"],
+      "@styles/*": ["./app/styles/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
