--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
       "@providers/*": ["./app/providers/*"],
       "@hooks/*": ["./app/hooks/*"],
       "@views/*": ["./app/views/*"],
+      "@texts/*": ["./app/texts/*"],
       "@styles/*": ["./app/styles/*"],
     }
   },
