--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,12 @@
       "@functions/*": ["./app/utils/functions/*"],
       "@appTypes/*": ["./app/utils/types/*"],
       "@constants/*": ["./app/utils/constants/*"],
+      "@components/*": ["./app/components/*"],
+      "@providers/*": ["./app/providers/*"],
+      "@hooks/*": ["./app/hooks/*"],
+      "@views/*": ["./app/views/*"],
+      "@texts/*": ["./app/texts/*"],
+      "@styles/*": ["./app/styles/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
