--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dotenv-cli": "^7.4.1",
     "eslint": "^8",
     "eslint-config-next": "^14.1.0",
     "eslint-plugin-prettier": "^5.1.3",
