--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "prepare": "panda codegen",
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -15,7 +15,7 @@
     "@vinejs/vine": "^1.7.1",
     "bcrypt": "^5.1.1",
     "jose": "^5.2.2",
-    "next": "^14.1.4",
+    "next": "^14.2.0",
     "react": "^18",
     "react-dom": "^18"
   },
