--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,33 @@
 version: '3.8'
 
 services:
+  app:
+    container_name: portfolio-app
+    build:
+      context: .
+      target: production
+    restart: unless-stopped
+    env_file: .env.local
+    volumes:
+      - .:/app
+    ports:
+      - "55111:3000"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.portfolio.rule=Host(`timeuh.fr`)"
+      - "traefik.http.routers.portfolio.entrypoints=websecure"
+      - "traefik.http.routers.portfolio.tls.certresolver=myresolver"
+      - "traefik.http.services.portfolio.loadbalancer.server.port=3000"
+    networks:
+      - traefik_web
+    working_dir: /app
+
   database:
     image: postgres
     container_name: portfolio-database
     restart: unless-stopped
     ports:
-      - "54032:5432"
+      - "55032:5432"
     env_file:
       - .env.local
 
@@ -15,4 +36,4 @@ services:
     container_name: portfolio-adminer
     restart: unless-stopped
     ports:
-      - "54080:8080"
+      - "55080:8080"
