Rename containers for test deployment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   app:
-    container_name: portfolio-app
+    container_name: portfolio-app-test
     build:
       context: .
       target: production
@@ -16,7 +16,7 @@ services:
 
   database:
     image: postgres
-    container_name: portfolio-database
+    container_name: portfolio-database-test
     restart: unless-stopped
     ports:
       - "55032:5432"
@@ -25,7 +25,7 @@ services:
 
   adminer:
     image: adminer
-    container_name: portfolio-adminer
+    container_name: portfolio-adminer-test
     restart: unless-stopped
     ports:
       - "55080:8080"
